Resolve Sonar reported issues